; ModuleID = '/home/carl/AnghaBench/reactos/sdk/lib/drivers/ip/network/extr_loopback.c_LoopRegisterAdapter.c'
source_filename = "/home/carl/AnghaBench/reactos/sdk/lib/drivers/ip/network/extr_loopback.c_LoopRegisterAdapter.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_10__ = type { i32, i32, i32, i32, %struct.TYPE_8__ }
%struct.TYPE_8__ = type { i8*, i32, i32 }
%struct.TYPE_9__ = type { i32, i64, i32*, i64, i64, i32* }

@MID_TRACE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [9 x i8] c"Called.\0A\00", align 1
@LoopTransmit = common dso_local global i32 0, align 4
@Loopback = common dso_local global %struct.TYPE_10__* null, align 8
@NDIS_STATUS_RESOURCES = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [9 x i32] [i32 76, i32 111, i32 111, i32 112, i32 98, i32 97, i32 99, i32 107, i32 0], align 4
@LOOPBACK_ADDRESS_IPv4 = common dso_local global i32 0, align 4
@LOOPBACK_ADDRMASK_IPv4 = common dso_local global i32 0, align 4
@LOOPBACK_BCASTADDR_IPv4 = common dso_local global i32 0, align 4
@MAX_TRACE = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [10 x i8] c"Leaving.\0A\00", align 1
@NDIS_STATUS_SUCCESS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @LoopRegisterAdapter(i32 %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca %struct.TYPE_9__, align 8
  store i32 %0, i32* %4, align 4
  store i32* %1, i32** %5, align 8
  %7 = load i32, i32* @MID_TRACE, align 4
  %8 = call i32 @TI_DbgPrint(i32 %7, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0))
  %9 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %6, i32 0, i32 5
  store i32* null, i32** %9, align 8
  %10 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %6, i32 0, i32 4
  store i64 0, i64* %10, align 8
  %11 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %6, i32 0, i32 3
  store i64 0, i64* %11, align 8
  %12 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %6, i32 0, i32 2
  store i32* null, i32** %12, align 8
  %13 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %6, i32 0, i32 1
  store i64 0, i64* %13, align 8
  %14 = load i32, i32* @LoopTransmit, align 4
  %15 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %6, i32 0, i32 0
  store i32 %14, i32* %15, align 8
  %16 = call %struct.TYPE_10__* @IPCreateInterface(%struct.TYPE_9__* %6)
  store %struct.TYPE_10__* %16, %struct.TYPE_10__** @Loopback, align 8
  %17 = load %struct.TYPE_10__*, %struct.TYPE_10__** @Loopback, align 8
  %18 = icmp ne %struct.TYPE_10__* %17, null
  br i1 %18, label %21, label %19

19:                                               ; preds = %2
  %20 = load i32, i32* @NDIS_STATUS_RESOURCES, align 4
  store i32 %20, i32* %3, align 4
  br label %60

21:                                               ; preds = %2
  %22 = load %struct.TYPE_10__*, %struct.TYPE_10__** @Loopback, align 8
  %23 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %22, i32 0, i32 0
  store i32 16384, i32* %23, align 8
  %24 = load %struct.TYPE_10__*, %struct.TYPE_10__** @Loopback, align 8
  %25 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %24, i32 0, i32 4
  %26 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %25, i32 0, i32 0
  store i8* bitcast ([9 x i32]* @.str.1 to i8*), i8** %26, align 8
  %27 = load %struct.TYPE_10__*, %struct.TYPE_10__** @Loopback, align 8
  %28 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %27, i32 0, i32 4
  %29 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %28, i32 0, i32 0
  %30 = load i8*, i8** %29, align 8
  %31 = call i32 @wcslen(i8* %30)
  %32 = sext i32 %31 to i64
  %33 = mul i64 %32, 4
  %34 = trunc i64 %33 to i32
  %35 = load %struct.TYPE_10__*, %struct.TYPE_10__** @Loopback, align 8
  %36 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %35, i32 0, i32 4
  %37 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %36, i32 0, i32 2
  store i32 %34, i32* %37, align 4
  %38 = load %struct.TYPE_10__*, %struct.TYPE_10__** @Loopback, align 8
  %39 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %38, i32 0, i32 4
  %40 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %39, i32 0, i32 1
  store i32 %34, i32* %40, align 8
  %41 = load %struct.TYPE_10__*, %struct.TYPE_10__** @Loopback, align 8
  %42 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %41, i32 0, i32 3
  %43 = load i32, i32* @LOOPBACK_ADDRESS_IPv4, align 4
  %44 = call i32 @AddrInitIPv4(i32* %42, i32 %43)
  %45 = load %struct.TYPE_10__*, %struct.TYPE_10__** @Loopback, align 8
  %46 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %45, i32 0, i32 2
  %47 = load i32, i32* @LOOPBACK_ADDRMASK_IPv4, align 4
  %48 = call i32 @AddrInitIPv4(i32* %46, i32 %47)
  %49 = load %struct.TYPE_10__*, %struct.TYPE_10__** @Loopback, align 8
  %50 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %49, i32 0, i32 1
  %51 = load i32, i32* @LOOPBACK_BCASTADDR_IPv4, align 4
  %52 = call i32 @AddrInitIPv4(i32* %50, i32 %51)
  %53 = load %struct.TYPE_10__*, %struct.TYPE_10__** @Loopback, align 8
  %54 = call i32 @IPRegisterInterface(%struct.TYPE_10__* %53)
  %55 = load %struct.TYPE_10__*, %struct.TYPE_10__** @Loopback, align 8
  %56 = call i32 @IPAddInterfaceRoute(%struct.TYPE_10__* %55)
  %57 = load i32, i32* @MAX_TRACE, align 4
  %58 = call i32 @TI_DbgPrint(i32 %57, i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.2, i64 0, i64 0))
  %59 = load i32, i32* @NDIS_STATUS_SUCCESS, align 4
  store i32 %59, i32* %3, align 4
  br label %60

60:                                               ; preds = %21, %19
  %61 = load i32, i32* %3, align 4
  ret i32 %61
}

declare dso_local i32 @TI_DbgPrint(i32, i8*) #1

declare dso_local %struct.TYPE_10__* @IPCreateInterface(%struct.TYPE_9__*) #1

declare dso_local i32 @wcslen(i8*) #1

declare dso_local i32 @AddrInitIPv4(i32*, i32) #1

declare dso_local i32 @IPRegisterInterface(%struct.TYPE_10__*) #1

declare dso_local i32 @IPAddInterfaceRoute(%struct.TYPE_10__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
